# PR5-DAA-2425

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  cross.ini  justfile  meson.build  mise.toml
docs/: summary.md
examples/: 4.txt  benchmark_example.cc  instance1.txt  tsp_benchmark_example.cc
include/: algorithm_factory.h  algorithm_registry.h  algorithm_registry_modern.h  algorithm_registry_modern_example.h  algorithms.h  application.h  benchmarking.h  colorized_formatter.h  command_handler.h  command_registry.h  commands.h  config.h  config.h.in  data_generator.h  graph.h  meta_heuristic.h  meta_heuristic_components.h  meta_heuristic_factory.h  meta_heuristic_factory_modern.h  meta_heuristic_modern.h  mitata.h  time_utils.h  tsp.h  ui.h  utils.h
include/algorithms/: algorithm_registry_setup.h  brute_force_tsp.h  cv_local_search.h  dynamic_programming_tsp.h  grasp_cv_generator.h  greedy_cv_generator.h  greedy_tv_scheduler.h  gvns.h  mid_neighbor_tsp.h  multi_start.h  nearest_neighbor_tsp.h  neighborhood_bitmap.h  simulated_annealing_tsp.h  solver.h  two_opt_tsp.h  vrpt_solution.h
include/algorithms/local_search/: cv_local_search.h  task_exchange_between_routes_search.h  task_exchange_search.h  task_exchange_within_route_search.h  task_reinsertion_between_routes_search.h  task_reinsertion_search.h  task_reinsertion_within_route_search.h  two_opt_search.h
include/commands/: benchmark.h  compare.h  help.h  list.h  validate.h  visualize.h
include/parser/: diagnostic.h  tsp_driver.h  tsp_lexer.h  tsp_lexer.l  tsp_parser.y  vrpt_driver.h  vrpt_lexer.h  vrpt_lexer.l  vrpt_parser.y
include/problem/: concepts.h  kdtree.h  location.h  route.h  strong_types.h  structures.h  units.h  vrpt_problem.h
include/solution/: solution.h
include/visualization/: application.h  canvas.h  csv_exporter.h  gui_manager.h  imgui_theme.h  latex_exporter.h  object_manager.h  problem_manager.h  ui_components.h  ui_icons.h  ui_theme_colors.h  vulkan_renderer.h  window_system.h
report/: report.typ  template.typ
resources/layouts/: imgui.ini
resources/shaders/: grid.fs
src/: CMakeLists.txt  application.cc  command_handlers.cc  command_registry.cc  main.cc
src/algorithms/: gvns.cc  multi_start.cc  solver.cc
src/commands/: benchmark.cc  compare.cc  list.cc  validate.cc  visualize.cc
src/problem/: vrpt_problem.cc
src/visualization/: application.cc  canvas.cc  csv_exporter.cc  gui_manager.cc  imgui_theme.cc  latex_exporter.cc  object_manager.cc  problem_manager.cc  ui_components.cc  vulkan_renderer.cc  window_system.cc
